[package]
name = "noisebench"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0", features = ["jpeg"] }
bevy_egui = "0.28.0"
bytemuck = "1.16.1"
crossbeam-channel = "0.5.13"
dyn-clone = "1.0.17"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
notify = "6.1.1"
opensimplex2 = "1.1.0"
